--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -17,7 +17,7 @@
 
 @book{Krug2014,
  author = {Steve Krug},
- title = {Dont' Make Me Think, Revisited},
+ title = {Don't Make Me Think, Revisited},
  year = {2014},
  publisher = {New Riders},
  isbn = {9780321965516},
