--- a/MyPLoSArticle.Rmd
+++ b/MyPLoSArticle.Rmd
@@ -11,7 +11,7 @@ address:
 abstract: |
   Library science principles offer a framework and methodology for working through the maze of information generated in professional life.  Information ecosystems are composed of users, context, and content, and all 3 areas need to be addressed to make information findable.  Scientists should define their users and needs and then leverage the structural elements of the software they use to create, store, and access information before they can refine their content and how they present it via naming and subject metadata.  Ultimately, improving findability promotes the scientist's work through contribution, iteration, and dissemination of information and ideas.
 author_summary: |
-  Sarah Lin is the Information Architect & Digital Librarian at RStudio.
+  Sarah Lin is the Information Architect & Digital Librarian at RStudio, PBC.
 bibliography: mybibfile.bib
 output: rticles::plos_article
 csl: plos.csl
@@ -34,7 +34,7 @@ librarians make a career out of helping people find information and use informat
 Library science principles offer ways to work through the maze of information generated in professional life,
 and librarians' skills can be applied by any researcher who feels overwhelmed.
 The ten quick tips in this paper are simple to understand, easy to apply, and effective.
-They are based on the fat that information ecosystems have three parts: users, context, and content [@Rosenfeld2015].
+They are based on the fact that information ecosystems have three parts: users, context, and content [@Rosenfeld2015].
 Solving the challenges of information retrieval at the point of need therefore requires addressing
 the people who use your information,
 the context within which it is created,
@@ -57,8 +57,8 @@ however,
 accept the idea that complete novices will find it,
 thereby making your actual user base much larger than you might realize.
 
-Novice users should be able to understand and navigate your content just as well as a subject experts.
-This much broader range of users means that you would expect a wide spectrum of content knowledge
+Novice users should be able to understand and navigate your content just as well as subject experts.
+This much broader range of users means that you would expect a wide spectrum of domain knowledge
 as well as facility navigating your discipline's routine practices.
 
 The information you wish to convey and they way it is currently organized probably makes perfect sense to you.
@@ -66,7 +66,7 @@ Its meaning for your users,
 however,
 is determined by *their* experience.
 That knowledge is "*whatever a user interprets* from the arrangement or sequence of things they encounter" [@Covert2014].
-This is another way of saying that the organization structure(s) you employ are a communication channel in their own right,
+This is another way of saying that the organizational structure(s) you employ are a communication channel in their own right,
 in addition to the domain knowledge you share.
 In addition to knowing who your users are and how important they are to the impact of your work,
 remember that any information you transmit to them is shaped by the mechanism(s) you use.
@@ -106,9 +106,19 @@ you may have challenges in all three areas.
 There are fine-tuning techniques appropriate for each;
 the remaining tips related to context and content will help you address the full scope of your findability problem.
 
-FIXME: a paragraph here saying, "For example, the findability problem for user X with information Y is Z,
-while the findability problem for user P with that same information is Q."
-Otherwise this is hard for me to relate to.
+Take, for example, the faculty website of a researcher coming up for tenure.
+The researcher created the website as a place to dump her vitae content 
+and make it easier to fill out grant applications by having professional activities listed in one place.  
+A librarian might access that site looking for journal articles to include in the university's institutional repository, 
+whereas a student might come looking for course information.  
+Tenure committee members might be interested in that laundry list of accomplishments, 
+as a way to determine the impact factor of the researcher's published work.
+Three of these users need the researcher's list of professional publications,
+but three different 'versions' of that information.  
+The researcher might only provide a plain text citation which meets her needs,
+but the librarian wouldn't get a link to the full text (or a PDF download) 
+and the university administrator would not find each publication's impact factor.  
+The student needs are not considered at all.
 
 ## 3. Use Textual Structure
 
@@ -128,19 +138,22 @@ which supports both scanning and navigation.
 
 Textual content is created and aggregated in so many forms and using so many different programs
 that specifying strategies beyond headings, lists, and highlighting is difficult.
-Generally,
-you want to exploit the features of the textual program
+While you want to exploit the features of the textual program
 (your word processing software, data aggregator, or other information-processing-tool)
-to the greatest degree possible.
-FIXME: I don't think anyone would say "*don't* use them to the greatest degree possible..."
-FIXME: Can you provide an example here of a program-specific strategy, e.g., something people could do with CSV files?
+to the greatest degree possible, 
+you must first investigate each software for ways to do so and think about each program as a way to notate information in addition to creating, manipulating, or storing it.
+Examples include:
+*GitHub offers tags that can be added to committ messages and are searchable.
+*Electronic lab notebooks of any kind can make use of an XML schema, like Darwin Core, EML, or FITS (@Briney2015).
+*Using specific Google Docs heading levels creates a table of contents in real time, visible when the file is open.
+*Since CSV and spreadsheet files contain data, use a README file or create a data dictionary to provide information about the data and store it with raw data files.
 
 ## 4. Add Metadata
 
 Just like people who end up with piles of photographs with nothing written on the back,
-we all have digital mounds of files and content with no format or subject information in the Properties.
-[FIXME: what do you mean by "Properties"? Is that OS-specific? "Does it work on Linux?" is unfortunately a real question...]
-Metadata adds extra access points for information retrieval,
+we all have digital mounds of files and content with no format or subject information in the Properties (feature used by most modern operating systems).
+Metadata, such as those contained in a file's Properties, 
+adds extra access points for information retrieval,
 which gives users more avenues to find what they need.
 However,
 what metadata you are able to add depends on the software used to create, store, and access your information,
@@ -156,9 +169,15 @@ If you ever have a choice of software,
 one that makes use of metadata and structural labels enhances search tremendously.
 It is also useful to examine how metadata can be transferred from an old system to a new one
 if you have the luxury of multiple software options
-(or have had a change forced on you).
-
-FIXME: example?
+(or have had a change forced on you).  
+For example, 
+the tagging implemented on a WordPress website doesn't correspond to a taxonomy field in a .yml header file.  
+Keywords added to a journal article submission are not automatically added to the file metadata in PDF format, 
+and pulling a citation from an article database doesn't give you the keywords as well.  
+Unfortunately, metadata is often software-specific 
+and it is worth thinking through what portability options you might have.  
+XML is an established standard that would port metadata, 
+if the software you're using accomodates it.  Exporting metadata in a portable file format, like plain text or XML, would have more flexibility in migrating software formats.
 
 ## 5. Use Search **and** Browsing
 
@@ -172,7 +191,7 @@ and what information is available from the system" [@Rosenfeld2015].
 They refine their search further as they see results,
 often navigating into a result or two to further their understanding.
 You have probably seen or done something similar with a print book,
-trying to determine if it's one you want.
+trying to determine if it's one you want by looking at the table of contents and the back cover.
 These two functions work together
 because search allows users to find information they know they need,
 whereas browsing allows users to find information they don't know that they need [@Bates20021].
@@ -184,21 +203,36 @@ Tags and other metadata help with searching,
 while browsing a list of tags, a table of contents, or even a file directory
 tells users a lot about the content contained in the information they are looking at.
 
-Textual signifiers and software structures also help users navigate between searching and browsing
+Textual signifiers---elements within a text that convey meaning outside of the words themselves---and 
+software structures also help users navigate between searching and browsing
 by making the information framework visible to the users.
-[FIXME: what's a "textual signifier"?]
 That communication,
 "enables the answers to users' questions to 'rise' to the surface" and answer questions like,
 Where am I?  What's here?  Where can I go from here?" [@Rosenfeld2015].
 These are essential wayfinding questions on the way to findability
 and interact closely with the navigational choices you make for your information.
 
-FIXME: example?
+A system of headings marked in a textual file is a great example of intradocument wayfinding.  
+As a user scans the text, 
+the headings act as topical markers, 
+so they can both summarize what information is contained in the document, 
+but also refine what they would search for based on the terms used in those headings.
+Navigation bars on websites function in a similar way.  
+If the user knows exactly what they are looking for, 
+they can scan the menu and select the option that matches their need.  
+In a situation where they don't know exactly what they need, 
+the terms in the menu help them understand both the vocabulary used in this domain 
+as well as the boundaries for what is included (i.e. terms are listed) or excluded (i.e. no menu terms exist).
+In this way,
+search and browse work together to enhance findability.  
+Though search might be thought of as a universal solution, 
+without knowing what it is possible to find and the words used to find it,
+search is not a stand-alone solution.
 
 ## 6. Mimic Real World Directions
 
 Even in a digital environment,
-our language mirrors that used for physical directions.
+our language mirrors that used for physical directions.  We 'visit' or 'go to' a website without actually changing our physical location.
 Using the navigational metaphor completely is very helpful to ensuring that you help your users as much as possible,
 because "the words you use in the navigation systems and headings of [your content] help you find what you're looking *for*,
 but they also help you understand what you're looking *at*" [@Arango2018].
@@ -235,11 +269,14 @@ At the most basic level,
 "you should use consistent names for the same reason that you use good file organization:
 so you can easily find and use data later.
 Additionally, good naming helps you avoid duplicate information"[@Briney2015].
+Researchers with multiple research projects 
+or significant complexity in their data sources 
+might want to establish a unified system of abbreviations for those projects or sources (these would be best summarized in a data dictionary or README file).
 Consistency is key:
 choosing your preferred case,
 preferred date format (YYYMMDD or YYYY-MM-DD will both sort chronologically),
-and any project or source codes [FIXME: I don't know what "project or source codes" are?]
-are all areas where standardization will benefit anyone searching for information.
+and any project or source codes related to your research and/or data types
+are all areas where standardization will benefit anyone searching for information.  
 
 If you have things to name that are not files,
 such as projects, web pages, or document headings,
@@ -254,20 +291,28 @@ It should.
 Also,
 think about nicknames or shortened versions of your names
 and make sure they are present in text or tags so that the content can be discovered by a search engine and a user.
-
-FIXME: example of bad turned into good?
+Naming your raw data file "raw" or a downloaded file "download" 
+makes finding the information they contain nearly impossible.  
+Renaming files can seem like a waste of precious time, 
+but since the research cycle doesn't end with publication (@Briney2015), 
+there is a very high likelihood that someone will need to reuse your data 
+and will have to try to figure out what files corresponded to what part of your research.
 
 ## 8. Use Tags
 
-FIXME: worth pointing out that tagging allows us to "file" things in multiple locations without creating duplicate copies,
-so that we can essentially overlay several mental models of the information for different users?
-
 Software metadata choices are part of the structural context of your information,
 but what you choose to put in metadata fields related to content subject and formats depends on your source material.
-Additionally, digital information can handle multiple tags, which aides searching.
-Be consistent in your depth of topical term assignment and selection of terms for subject and format.
-Choosing which terms you use may not matter much for your discipline beyond a need for consistency.
-[FIXME: I think the preceding sentence is redundant.]
+Additionally, digital information can handle multiple tags, which aides searching.  
+This is a key feature, 
+because it means that you can now 'file' information in multiple locations---
+something that was not possible in the era of print-only information.
+Multiple tags also assist users from varied backgrounds 
+because the terms can be customized to each type of user your information has.
+You need to be consistent in your depth of topical term assignment (how specific your terms are) 
+and selection of terms for subject and format (the number of terms you use to describe each subject and format).
+Exactly which terms you choose may not matter much for your discipline, 
+beyond a need for consistency, 
+but in some disciplines the particular terms chosen matters a great deal.
 However, if your discipline has a established thesaurus, it can be great source for standardized subject terms.
 Thesauri have built-in subject hierarchies that can help you create navigational structure.
 Examples include [@ASI2020]:
@@ -281,21 +326,21 @@ Examples include [@ASI2020]:
 -   Medical Subject Headings (MeSH)
 
 These types of term lists are controlled vocabularies.
-They have a defined list of "official" terms that is created and maintained by an expert of some sort.
+They have a defined list of "official" terms that is created and maintained by experts.
 There may or may not be relationships built between terms,
 such as equivalencies (CA = California),
-broader/narrower terms (FIXME: example),
+broader/narrower terms (United States/California),
 and/or replacement (weed USE marijuana).
 One benefit of using established subject terms is that
-they that will match article databases and library catalogs you and your users might already be familiar with.
+they that will match article databases and library catalogs that you and your users might already be familiar with.
 
 Alternatively,
-you might create your own taxonomy of subject keywords, which is called a *folksonomy*.
-Folksonomies are what you see with tags on Flickr: [FIXME: is Flickr still a thing? Maybe reference Stack Overflow?]
+you can create your own taxonomy of subject keywords, which is called a *folksonomy*.
+Folksonomies are what you see with tags on Flickr and Unsplash:
 the content creators assign terms as they see fit.
 Additionally,
 users can tag with whatever terms they like
-and the list of possible terms is both uncontrolled (no one is watching for synonyms or misspellings)
+and the list of possible terms is both uncontrolled (no one is watching for synonyms, misspellings, or inconsistencies)
 and crowd-sourced (created by non-experts).
 The good news is that there is probably a place you can find tags in use
 that are a similar topic or content to yours that will inspire the tag structure and/or terms you'll want to use.
@@ -305,15 +350,21 @@ and be sure to review that list on a regular basis for errors and misspellings.
 
 ## 9. Understand the Difference Between Form and Substance
 
-When you create metadata tags, [FIXME: are these the same as folksonomy tags above?]
+When you create metadata tags---
+whether controlled like a thesaurus or uncontrolled like a folksonomy---
 you need to address the distinction between format and subject,
 which adds another layer of conceptual analysis to your tagging process.
 Format describes what your content *is*,
 while subject describes what it is *about* [@Joudrey2015].
 About-ness is the most common content analysis,
 but you will likely have issues of is-ness that affect your users
-and will want to add another layer of metadata to address it.
-FIXME: I need an example here to distinguish the two.
+and will want to add another layer of metadata to address it, where appropriate.
+A simple example of this is a blog post on a website.  
+The post is *about* a subject, but it *is* a blog post.  
+If it were your website, 
+you would want to tag that file both for its subject matter 
+but also that it's a blog post.  
+This enables users to search or filter by topic, format, or both.
 
 Going back to your users,
 what subjects are important to them?
@@ -322,16 +373,20 @@ This is basically a question of combined terms:
 are your format terms uniquely matched to topical terms (blog posts are always about news)
 or do you have multiple topics in each format (blog posts and tutorials on the same subject)?
 When you think of file formats,
-sometimes the software takes care of that format analysis for you,
-for example if data is stored in CSV files or a presentation is in Keynote or PowerPoint.
-[FIXME: does this mean "the software chooses the format which in turn signals what the content is"?]
+sometimes the software chooses the format which in turn signals what the content is, for example, 
+data stored in CSV files or a presentation saved as a Keynote or PowerPoint file.  
+In these cases, you know a CSV file will contain some type of a data to be analyzed, 
+whereas Keynote and PowerPoint will have slides that are viewed unidirectionally.
 However,
 dissemination sometimes changes a file's format (e.g., printing slides to a PDF),
 in which case careful naming and metadata conventions would recommend putting the format into the name and/or file metadata.
 Once you are aware of format and subject analysis,
 you will likely see more opportunities to distinguish information sources for your users.
-
-FIXME: example?
+You might create a folder specifically for conference presentations 
+that could include both .ppt and .pdf file extensions, 
+where each presentation's files have the exact same name (with different filetypes).  
+Likewise, journal articles you store will need a naming convention that distinguishes 
+between articles you have written and those relied on for research.  
 
 ## 10. Do Not Abbrvt
 
@@ -352,11 +407,11 @@ or create or point to a term dictionary.
 ## Conclusion
 
 Changing work habits is hard,
-and you must decide whether to start new work with a clean slate of new information rules
+and you must decide whether to start new work with a clean slate of new information principles
 or if you must go back and alter---perhaps rename---existing work products [@Briney2015].
 Remember that while "perfection isn't possible, progress is" [@Covert2014].
 Creating and structuring good information for your users is your goal,
-but these rules and the
+but these tips and the
 "ways you enforce your way of doing things changes how users think about the place[s] you made
 and perhaps ultimately, how they think about you" [@Covert2014].
 Circling back to the network of users you are situated among,
